--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="modal modal_type_profile"> 
       <div class="modal__container">   
         <form class="modal__form modal__form_type_profile" action="#" method="POST">
-          <button aria-label="Close Form" type="button" class="modal__close-button modal_close-profile button">
+          <button aria-label="Close Form" type="button" class="modal__close-button modal__close-button_profile button">
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon">
           </button>
           <h3 class="modal__title">Edit profile</h3>
@@ -46,7 +46,7 @@
     <div class="modal modal_type_add-card"> 
       <div class="modal__container">   
         <form class="modal__form modal__form_type_add-card" action="#" method="POST">
-          <button aria-label="Close Form" type="button" class="modal__close-button modal_close-add-card button">
+          <button aria-label="Close Form" type="button" class="modal__close-button modal__close-button_add-card button">
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon">
           </button>
           <h3 class="modal__title">New Place</h3>
@@ -61,7 +61,7 @@
       <div class="modal__container">   
         <div class="modal__form modal__form_type_preview">
           <button aria-label="Close Form" type="button" class="modal__close-button button">
-            <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon modal_close-preview">
+            <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon modal__close-icon_preview">
           </button>
           <img class="modal__image" src="#" alt="#">   
           <p class="modal__caption"></p>         
