--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </button>
           <h3 class="modal__title">New Place</h3>
           <input type="text" name="title" class="modal__input modal__input_type_title" placeholder="Title">         
-          <input type="url" name="image url" class="modal__input modal__input_type_image-url" placeholder="Image URL">                 
+          <input type="url" name="image url" class="modal__input modal__input_type_image-url" placeholder="Image URL" required>                 
           <button aria-label="Submit Form" type="submit" class="modal__submit modal__submit_type_create-card button">Create</button>  
         </form>
       </div>
