--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon">
           </button>
           <h3 class="modal__title">Edit profile</h3>
-          <input type="text" name="name" class="modal__input modal__input_type_name" placeholder="Name">         
-          <input type="text" name="occupation" class="modal__input modal__input_type_occupation" placeholder="About me">                 
-          <button aria-label="Submit Form" type="submit" class="modal__submit button">Save</button>  
+          <input type="text" name="name" class="modal__input modal__input_type_name" placeholder="Name" required minlength="2" maxlength="40">         
+          <input type="text" name="occupation" class="modal__input modal__input_type_occupation" placeholder="About me" required minlength="2" maxlength="200">                 
+          <button aria-label="Submit Form" type="submit" class="modal__button modal__submit button">Save</button>  
         </form>
       </div>
     </div>  
@@ -50,9 +50,9 @@
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon">
           </button>
           <h3 class="modal__title">New Place</h3>
-          <input type="text" name="title" class="modal__input modal__input_type_title" placeholder="Title">         
+          <input type="text" name="title" class="modal__input modal__input_type_title" placeholder="Title" required minlength="1" maxlength="30">         
           <input type="url" name="image url" class="modal__input modal__input_type_image-url" placeholder="Image URL" required>                 
-          <button aria-label="Submit Form" type="submit" class="modal__submit modal__submit_type_create-card button">Create</button>  
+          <button aria-label="Submit Form" type="submit" class="modal__button modal__submit modal__submit_type_create-card button">Create</button>  
         </form>
       </div>
     </div>  
@@ -60,7 +60,7 @@
     <div class="modal modal_type_preview"> 
       <div class="modal__container">   
         <div class="modal__form modal__form_type_preview">
-          <button aria-label="Close Form" type="button" class="modal__close-button button">
+          <button aria-label="Close Form" type="button" class="modal__button modal__close-button button">
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon modal__close-icon_preview">
           </button>
           <img class="modal__image" src="#" alt="#">   
@@ -85,8 +85,8 @@
     </template>
 
    
-
-    <script src="./scripts/index.js"></script>  
+    <script src="./scripts/validation.js" defer></script>
+    <script src="./scripts/index.js" defer></script>  
 
 
   </body> 
