--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <footer class="footer"><p class="footer__copyright">&copy;2020. Around the US</p></footer>
 
     <div class="modal modal_type_profile"> 
-      <div class="modal__container">   
+      <div class="modal__container modal__container_type_profile">   
         <form class="modal__form modal__form_type_profile" action="#" method="POST">
           <button aria-label="Close Form" type="button" class="modal__close-button modal__close-button_profile button">
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon">
@@ -44,7 +44,7 @@
     </div>  
     
     <div class="modal modal_type_add-card"> 
-      <div class="modal__container">   
+      <div class="modal__container modal__container_type_add-card">   
         <form class="modal__form modal__form_type_add-card" action="#" method="POST">
           <button aria-label="Close Form" type="button" class="modal__close-button modal__close-button_add-card button">
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon">
@@ -58,7 +58,7 @@
     </div>  
 
     <div class="modal modal_type_preview"> 
-      <div class="modal__container">   
+      <div class="modal__container modal__container_type_preview">   
         <div class="modal__form modal__form_type_preview">
           <button aria-label="Close Form" type="button" class="modal__button modal__close-button button">
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon modal__close-icon_preview">
