--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
 
     <div class="modal modal_type_profile"> 
       <div class="modal__container modal__container_type_profile">   
-        <form class="modal__form modal__form_type_profile" action="#" method="POST">
+        <form class="modal__form modal__form_type_profile" action="#" method="POST" novalidate>
           <button aria-label="Close Form" type="button" class="modal__close-button modal__close-button_profile button">
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon">
           </button>
           <h3 class="modal__title">Edit profile</h3>
-          <input type="text" name="name" class="modal__input modal__input_type_name" placeholder="Name" required minlength="2" maxlength="40">         
-          <input type="text" name="occupation" class="modal__input modal__input_type_occupation" placeholder="About me" required minlength="2" maxlength="200">                 
+          <input type="text" id="name" class="modal__input modal__input_type_name" placeholder="Name" required minlength="2" maxlength="40">         
+          <span class="modal__input-error" id="name-error">Please fill out this field.</span>
+          <input type="text" id="occupation" class="modal__input modal__input_type_occupation" placeholder="About me" required minlength="2" maxlength="200">                 
+          <span class="modal__input-error" id="occupation-error">Please fill out this field.</span>
           <button aria-label="Submit Form" type="submit" class="modal__button modal__submit button">Save</button>  
         </form>
       </div>
@@ -45,7 +47,7 @@
     
     <div class="modal modal_type_add-card"> 
       <div class="modal__container modal__container_type_add-card">   
-        <form class="modal__form modal__form_type_add-card" action="#" method="POST">
+        <form class="modal__form modal__form_type_add-card" action="#" method="POST" novalidate>
           <button aria-label="Close Form" type="button" class="modal__close-button modal__close-button_add-card button">
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon">
           </button>
