code javascript for form validation

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           </button>
           <h3 class="modal__title">Edit profile</h3>
           <input type="text" id="name" class="modal__input modal__input_type_name" placeholder="Name" required minlength="2" maxlength="40">         
-          <span class="modal__input-error" id="name-error">Please fill out this field.</span>
+          <span class="modal__input-error" id="name-error"></span>
           <input type="text" id="occupation" class="modal__input modal__input_type_occupation" placeholder="About me" required minlength="2" maxlength="200">                 
-          <span class="modal__input-error" id="occupation-error">Please fill out this field.</span>
+          <span class="modal__input-error" id="occupation-error"></span>
           <button aria-label="Submit Form" type="submit" class="modal__button modal__submit button">Save</button>  
         </form>
       </div>
