--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon">
           </button>
           <h3 class="modal__title">New Place</h3>
-          <input type="text" name="title" class="modal__input modal__input_type_title" placeholder="Title" required minlength="1" maxlength="30">         
-          <input type="url" name="image url" class="modal__input modal__input_type_image-url" placeholder="Image URL" required>                 
+          <input type="text" id="title" class="modal__input modal__input_type_title" placeholder="Title" required minlength="1" maxlength="30">         
+          <span class="modal__input-error" id="title-error"></span>
+          <input type="url" id="url" class="modal__input modal__input_type_image-url" placeholder="Image URL" required>                 
+          <span class="modal__input-error" id="url-error"></span>
           <button aria-label="Submit Form" type="submit" class="modal__button modal__submit modal__submit_type_create-card button">Create</button>  
         </form>
       </div>
@@ -61,14 +63,13 @@
 
     <div class="modal modal_type_preview"> 
       <div class="modal__container modal__container_type_preview">   
-        <div class="modal__form modal__form_type_preview">
+        <form class="modal__form modal__form_type_preview">
           <button aria-label="Close Form" type="button" class="modal__button modal__close-button button">
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon modal__close-icon_preview">
           </button>
           <img class="modal__image" src="#" alt="#">   
           <p class="modal__caption"></p>         
-        </div>   
-         
+        </form>           
       </div>      
     </div>  
 
