code javascript for inactive and active submit button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <span class="modal__input-error" id="name-error"></span>
           <input type="text" id="occupation" class="modal__input modal__input_type_occupation" placeholder="About me" required minlength="2" maxlength="200">                 
           <span class="modal__input-error" id="occupation-error"></span>
-          <button aria-label="Submit Form" type="submit" class="modal__button modal__submit button">Save</button>  
+          <button aria-label="Submit Form" type="submit" class="modal__button modal__submit button" disabled>Save</button>  
         </form>
       </div>
     </div>  
@@ -56,7 +56,7 @@
           <span class="modal__input-error" id="title-error"></span>
           <input type="url" id="url" class="modal__input modal__input_type_image-url" placeholder="Image URL" required>                 
           <span class="modal__input-error" id="url-error"></span>
-          <button aria-label="Submit Form" type="submit" class="modal__button modal__submit modal__submit_type_create-card button">Create</button>  
+          <button aria-label="Submit Form" type="submit" class="modal__button modal__submit modal__submit_type_create-card button" disabled>Create</button>  
         </form>
       </div>
     </div>  
