code javascript for form validation

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="modal modal_type_profile"> 
       <div class="modal__container modal__container_type_profile">   
-        <form class="modal__form modal__form_type_profile" action="#" method="POST" novalidate>
+        <form class="form modal__form modal__form_type_profile" action="#" method="POST" novalidate>
           <button aria-label="Close Form" type="button" class="modal__close-button modal__close-button_profile button">
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon">
           </button>
@@ -47,7 +47,7 @@
     
     <div class="modal modal_type_add-card"> 
       <div class="modal__container modal__container_type_add-card">   
-        <form class="modal__form modal__form_type_add-card" action="#" method="POST" novalidate>
+        <form class="form modal__form modal__form_type_add-card" action="#" method="POST" novalidate>
           <button aria-label="Close Form" type="button" class="modal__close-button modal__close-button_add-card button">
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon">
           </button>
@@ -63,13 +63,13 @@
 
     <div class="modal modal_type_preview"> 
       <div class="modal__container modal__container_type_preview">   
-        <form class="modal__form modal__form_type_preview">
+        <div class="modal__form modal__form_type_preview">
           <button aria-label="Close Form" type="button" class="modal__button modal__close-button button">
             <img src="images/modal-close-icon.png" alt="X" class="modal__close-icon modal__close-icon_preview">
           </button>
           <img class="modal__image" src="#" alt="#">   
           <p class="modal__caption"></p>         
-        </form>           
+        </div>           
       </div>      
     </div>  
 
